<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.noelle.sailorbail.HomeScreen"
    android:background="@color/eggplant">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="182dp"
        android:layout_marginStart="80dp"
        android:width="100dp"
        android:height="100dp"
        android:background="@drawable/rounded_corner_thistle"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/plan_text"
        android:textAlignment="center"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="182dp"
        android:layout_marginStart="200dp"
        android:width="100dp"
        android:height="100dp"
        android:background="@drawable/rounded_corner_thistle"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/plan_call"
        android:textAlignment="center"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:background="@drawable/rounded_corner_thistle"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/emergency"
        android:textAlignment="center"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:srcCompat="@drawable/sob_logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/quicksand"
        android:text="Sail or Bail"
        android:textColor="@color/whites"
        android:textSize="36sp" />


</RelativeLayout>
