<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eggplant"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        app:srcCompat="@drawable/sob_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="56dp"
        android:layout_marginTop="51dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/phone_num"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/alias"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/whites"
        android:ems="10"
        android:inputType="text"
        android:digits="0123456789+"
        android:textColor="@color/whites"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@drawable/rounded_corner_thistle"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/next"
        android:textColor="@color/whites"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/whites"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/whites" />
</RelativeLayout>